# finex-pos

./: .gitignore  AGENTS.md  README.md  next.config.ts  package-lock.json  package.json
.claude/: launch.json
.github/workflows/: release.yml
app/: globals.css  layout.tsx  not-found.tsx
app/(main)/: layout.tsx  page.tsx
app/(main)/cash/: page.tsx
app/(main)/login/: page.tsx
app/(main)/report/: page.tsx
app/(main)/sale/: bill-detail.tsx  bill-panel.tsx  dialogs.tsx  helpers.tsx  jetons-panel.tsx  page.tsx  use-sale.ts
app/(main)/sync/: page.tsx
app/(main)/upload/: page.tsx
components/: app-alert.tsx  app-header.tsx  app-updater.tsx
components/ui/: button.tsx  date-picker.tsx  dialog.tsx  input.tsx  popover.tsx  select.tsx
lib/: api.ts  escpos.ts  format.ts  pos-db.ts  store.ts  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
